# pseuf

./: .gitignore  COPYING  Makefile  Makefile.am  README.md  TODO  autogen.sh  config.h.in  configure.ac  greek.c  greek.h  latex.c  markdown-unicode.c  markdown.c  pcode.h  pcode.l  pseuf.h  pseuf.l  qsort-wrapper.tex  qsort.pseu  specialchars-wrapper.tex  specialchars.c  specialchars.h  specialchars.pseu  symbols.c  symbols.h  utf8.c  wordtab.c  wrapper.tex
pseu/: durstenfeld-shuffle.pseu  inside-out-shuffle.pseu  qsort.pseu  shuffle.pseu
